@@ -131,6 +131,12 @@ decoration_window_start("Latest News");
 </center>
 <a name="2.5.9"></a>
 <h4>Changes in development release 2.5.9 (not release yet) <a href="#top">[top]</a></h4>
+<ul>
+  <li> New MenuStyle options PopupIgnore and PopupClose.</li>
+  <li> New configure option --disable-iconv to disable iconv support.</li>
+</ul>
+
+
 <a name="2.5.8"></a>
 <h4>Changes in development release 2.5.8 (31-Oct-2003) <a href="#top">[top]</a></h4>
 <ul>
