@@ -1,12 +1,12 @@
-	  Submitted by Mikhael Goikhman. This is a mix of different
-	  <a href="http://fvwm-themes.sf.net/">fvwm-themes</a> components
-	  plus some additional commands in FvwmConsole. This screenshot shows
-	  new 2.5.x features like transparent FvwmPager in the upper left, png
-	  icons from <a href="http://wm-icons.sf.net/">wm-icons</a> package,
-	  tinted transparent menus, multipixmap titlebars, FvwmButtons on the
-	  bottom that badly simulates the RedmondXP panel (it is managed by
-	  fvwm module written in perl), icons tinted differently in menus,
-	  shadow text and FreeType fonts. On the right is gkrellm.
+Submitted by Mikhael Goikhman. This is a mix of different
+<a href="http://fvwm-themes.sf.net/">fvwm-themes</a> components
+plus some additional commands in FvwmConsole. This screenshot shows
+new 2.5.x features like transparent FvwmPager in the upper left, png
+icons from <a href="http://wm-icons.sf.net/">wm-icons</a> package,
+tinted transparent menus, multipixmap titlebars, FvwmButtons on the
+bottom that badly simulates the RedmondXP panel (it is managed by
+fvwm module written in perl), icons tinted differently in menus,
+shadow text and FreeType fonts. On the right is gkrellm.
 
-	  <p>A similar configuration is availaible in the current fvwm-themes
-	  cvs version, you probably want to wait for the final 0.7.0 to try it.
+<p>A similar configuration is availaible out of the box in fvwm-themes 0.7.0
+or greater.
