@@ -1,3 +1,12 @@
+2003-12-08  Mikhael Goikhman  <migo@homemail.com>
+
+	* screenshots/desktops/Mikhael-desk-1280x1024/description.inc:
+	updated description
+
+	* documentation/faq/index.php:
+	* news/index.php:
+	regenerated
+
 2003-11-05  Dan Espen  <dane@mk.telcordia.com>
 
 	* screenshots/windowdecors/DecorDemo4.fvwmrc: Add plus sign from Rik Nilsson.
@@ -37,7 +46,7 @@
 
 	* authors/index.php:
 	* news/index.php:
-	* faq/index.php:
+	* documentation/faq/index.php:
 	regenerated
 
 2003-10-04  Uwe Pross  <uwe.pross@gmx.net>
